# polatory

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .run.ps1  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  appveyor.yml  packages.config  polatory.sln  polatory.vcxproj  polatory.vcxproj.filters  run  run.bat  setup.cfg  setup.py  sim.ipynb  sim2d.ipynb  sim3d.ipynb  sphere.py  variogram.ipynb  variogram.py  vcpkg-configuration.json  vcpkg.json
benchmark/: CMakeLists.txt  accuracy.cpp  benchmark.sh  points.cpp  predict.R  predict.cpp  sim.csv  simulate.R  simulate.ipynb  test.ipynb
cli/: CMakeLists.txt  commands.hpp  create_model_command.cpp  cross_validate_command.cpp  estimate_normals_command.cpp  evaluate_command.cpp  extract_model_command.cpp  fit_command.cpp  fit_model_to_variogram_command.cpp  isosurface_command.cpp  main.cpp  normals_to_sdf_command.cpp  show_model_command.cpp  show_variogram_command.cpp  surface_25d_command.cpp  unique_command.cpp  variogram_command.cpp
examples/: CMakeLists.txt  kriging_prediction.cpp  kriging_variogram.cpp  point_cloud.cpp  read_table.hpp
examples/accuracy/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/closed_normals/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/common/: bbox.hpp  common.cpp  common.hpp  make_model.hpp  model_options.hpp
examples/estimates_normals/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/kriging_cross_validation/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/kriging_fit/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/kriging_predict/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/kriging_predict_special_points/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/kriging_variogram/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/normals_sdf/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/offset_surface/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/point_cloud/: CMakeLists.txt  main.cpp  parse_options.hpp  point_cloud.sh
examples/sdf_surface/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/terrain/: CMakeLists.txt  main.cpp  terrain.sh
examples/terrain2/: CMakeLists.txt  main.cpp  terrain2.sh
examples/terrain_25d/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/terrain_3d/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/terrain_inequality/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/terrain_normals/: CMakeLists.txt  main.cpp  parse_options.hpp
examples/terrain_surface/: CMakeLists.txt  main.cpp  parse_options.hpp
python/: CMakeLists.txt  python_binding.cpp  structural_binding.cpp
python/examples/: test.py
python/tests/: test.py
src/: CMakeLists.txt  interpolant.cpp  lib_win64.cpp  stdafx.cpp
src/fmm/: direct_evaluator.hpp  direct_symmetric_evaluator.hpp  fmm_accuracy_estimator.hpp  fmm_evaluator.cpp  fmm_evaluator.hpp  fmm_evaluator_1d.cpp  fmm_evaluator_2d.cpp  fmm_evaluator_3d.cpp  fmm_gradient_evaluator.cpp  fmm_gradient_transpose_evaluator.cpp  fmm_hessian_evaluator.cpp  fmm_hessian_symmetric_evaluator.cpp  fmm_operator.cpp  fmm_rbf_gradient_kernel.hpp  fmm_rbf_hessian_kernel.hpp  fmm_rbf_kernel.hpp  fmm_rbf_kernel2.hpp  fmm_symmetric_evaluator.cpp  fmm_symmetric_evaluator.hpp  fmm_symmetric_evaluator_1d.cpp  fmm_symmetric_evaluator_2d.cpp  fmm_symmetric_evaluator_3d.cpp  full_direct.hpp  gradient_kernel.hpp  gradient_transpose_kernel  gradient_transpose_kernel.hpp  hessian_kernel.hpp  interpolator_configuration.hpp  kernel.hpp  lru_cache.hpp  make_evaluator.cpp  make_fmm_evaluator.cpp  spheroidal_evaluator.hpp  spheroidal_symmetric_evaluator.hpp  utility.hpp
src/geometry/: affine_transform3d.cpp  affine_transformation3d.cpp  bbox3d.cpp  transformation.cpp
src/interpolation/: rbf_direct_evaluator.cpp  rbf_direct_symmetric_evaluator.cpp  rbf_fitter.cpp  rbf_incremental_fitter.cpp  rbf_inequality_fitter.cpp
src/isosurface/: abstract_mesh.hpp  cluster.cpp  defeaturer.hpp  dense_undirected_graph.hpp  disjoint_sets.hpp  face_grid.hpp  genus_reducer.hpp  indexer.hpp  level_set_projection.hpp  mesh_consistency_checker.cpp  mesh_defects_finder.cpp  quadric_position.hpp  refine.cpp  relax.cpp  rmt_lattice.cpp  rmt_node.cpp  rmt_node_list.cpp  rmt_primitive_lattice.cpp  rmt_surface.cpp  snap.cpp  spatial_grid.hpp  utility.hpp  vertex_clusterer.hpp  vertex_refiner.hpp  vertex_relaxer.hpp
src/kriging/: cross_validation.cpp  empirical_variogram.cpp  variogram_calculator.cpp  variogram_fitting.cpp  weight_function.cpp  weight_functions.cpp
src/krylov/: fgmres.cpp  gmres.cpp  gmres_base.cpp  minres.cpp
src/point_cloud/: distance_filter.cpp  kdtree.cpp  normal_estimator.cpp  offset_points_generator.cpp  plane_estimator.cpp  random_points.cpp  scattered_data_generator.cpp  sdf_data_generator.cpp
src/preconditioner/: coarse_grid.cpp  domain.cpp  domain_divider.cpp  fine_grid.cpp  mat_a.hpp  ras_preconditioner.cpp
test/: CMakeLists.txt  main.cpp  random_anisotropy.hpp  utility.hpp
test/common/: test_bsearch.cpp  test_concatenate.cpp  test_eigen_utility.cpp  test_fold.cpp  test_iterator_range.cpp  test_likely.cpp  test_macros.cpp  test_orthonormalize.cpp  test_quasi_random_sequence.cpp  test_uncertain.cpp  test_zip_sort.cpp
test/fixtures/: horse_region_points.xyz
test/geometry/: test_affine_transform.cpp  test_affine_transform3d.cpp  test_affine_transformation3d.cpp  test_bbox3d.cpp
test/interpolation/: random_transform.hpp  random_transformation.hpp  sample_data.hpp  test_evaluator.cpp  test_fitter.cpp  test_incremental_fitter.cpp  test_inequality_fitter.cpp  test_operator.cpp  test_points_values.hpp  test_rbf_direct_solver.cpp  test_rbf_evaluator.cpp  test_rbf_fitter.cpp  test_rbf_incremental_fitter.cpp  test_rbf_inequality_fitter.cpp  test_rbf_operator.cpp  test_rbf_symmetric_evaluator.cpp  test_symmetric_evaluator.cpp  utility.hpp
test/isosurface/: test_bit.cpp  test_cdt.cpp  test_isosurface.cpp  test_predicates.cpp  test_rmt.cpp  test_snap.cpp  test_snap_selfint.cpp
test/krylov/: test_krylov.cpp
(+420 files in other folders)
