[metadata]
name = polatory
description = Python bindings for Polatory
url = https://github.com/polatory/polatory
author = Masashi Mizuno
license = MIT

[options]
python_requires = >=3.8
packages =
    polatory
    polatory.one
    polatory.two
    polatory.three
package_dir =
    = python/src
install_requires =
    numpy
