add_subdirectory(kriging_cross_validation)
add_subdirectory(kriging_fit)
add_subdirectory(kriging_predict)
add_subdirectory(kriging_variogram)
add_subdirectory(normals_sdf)
add_subdirectory(sdf_surface)
add_subdirectory(terrain_normals)
add_subdirectory(terrain_surface)
add_subdirectory(estimates_normals)
